--- a/BlogNet/appsettings.json
+++ b/BlogNet/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlogNet-0114BAC8-4C22-42BA-B59C-FA51CF78CBDC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.; Database=BlogNetDb; Trusted_Connection=True; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
